--- a/ProjectMuse/zExternal/zExternal.vcxproj
+++ b/ProjectMuse/zExternal/zExternal.vcxproj
@@ -115,7 +115,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ExVector.h" />
+    <ClInclude Include="NoCopy.hpp" />
+    <ClInclude Include="Vector.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
