--- a/ProjectMuse/zExternal/zExternal.vcxproj.filters
+++ b/ProjectMuse/zExternal/zExternal.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ExVector.h">
+    <ClInclude Include="Vector.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NoCopy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
