--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /ProjectMuse/ProjectMuse/x64/Debug
 /ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.user
 /ProjectMuse/zExternal/zExternal.vcxproj.user
+/ProjectMuse/ProjectMuse/Debug
