--- a/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj
+++ b/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj
@@ -121,11 +121,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\Travaux\Poly\inf2990-07\Sources\C++\TEMPLATE.cpp" />
+    <ClCompile Include="..\..\..\..\..\Travaux\Poly\inf2990-07\Sources\C++\TEMPLATE_SINGLETON.cpp" />
+    <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="FacadeApplication.cpp" />
+    <ClCompile Include="FacadeResources.cpp" />
+    <ClCompile Include="FacadeScene.cpp" />
+    <ClCompile Include="FacadeView.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Projection.cpp" />
+    <ClCompile Include="SceneNode.cpp" />
+    <ClCompile Include="State.cpp" />
     <ClCompile Include="StateStack.cpp" />
+    <ClCompile Include="UnitNode.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\Travaux\Poly\inf2990-07\Sources\C++\TEMPLATE.h" />
+    <ClInclude Include="..\..\..\..\..\Travaux\Poly\inf2990-07\Sources\C++\TEMPLATE_SINGLETON.h" />
+    <ClInclude Include="Application.h" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="FacadeApplication.h" />
+    <ClInclude Include="FacadeResources.h" />
+    <ClInclude Include="FacadeScene.h" />
+    <ClInclude Include="FacadeView.h" />
+    <ClInclude Include="GameState.h" />
+    <ClInclude Include="Projection.h" />
+    <ClInclude Include="SceneNode.h" />
+    <ClInclude Include="State.h" />
+    <ClInclude Include="StatesID.h" />
     <ClInclude Include="StateStack.h" />
+    <ClInclude Include="UnitNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
