Impletation de base des input pour le contrôle de la caméra.

--- a/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.filters
+++ b/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.filters
@@ -46,6 +46,12 @@
     <Filter Include="Source Files\Scene">
       <UniqueIdentifier>{138c593d-27a7-4ae8-900b-15ff499550ee}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Player">
+      <UniqueIdentifier>{3474862a-8cec-4498-ba38-9e1e22a23e3d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Player">
+      <UniqueIdentifier>{0bdddf8d-14ee-4806-8579-0dd88738c2ab}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -93,6 +99,15 @@
     <ClCompile Include="UnitNode.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="FacadePlayer.cpp">
+      <Filter>Source Files\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Mouse.cpp">
+      <Filter>Source Files\Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StateStack.h">
@@ -139,6 +154,15 @@
     </ClInclude>
     <ClInclude Include="UnitNode.h">
       <Filter>Header Files\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="FacadePlayer.h">
+      <Filter>Header Files\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Mouse.h">
+      <Filter>Header Files\Player</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
