--- a/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj
+++ b/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj
@@ -126,11 +126,14 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="FacadeApplication.cpp" />
+    <ClCompile Include="FacadePlayer.cpp" />
     <ClCompile Include="FacadeResources.cpp" />
     <ClCompile Include="FacadeScene.cpp" />
     <ClCompile Include="FacadeView.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projection.cpp" />
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="State.cpp" />
@@ -143,10 +146,13 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="FacadeApplication.h" />
+    <ClInclude Include="FacadePlayer.h" />
     <ClInclude Include="FacadeResources.h" />
     <ClInclude Include="FacadeScene.h" />
     <ClInclude Include="FacadeView.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Projection.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="State.h" />
