Added Composite hierarchy for scene objects complete with attach, remove and getter functions, Fixed alpha transparency issues, moved the draw function from the resource facade to the objects, fixed the facade scene so that it can now initialize the scene successfully

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,18 @@
 /ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.user
 /ProjectMuse/zExternal/zExternal.vcxproj.user
 /ProjectMuse/ProjectMuse/Debug
+/SpriteCreatorColorizer/Saved
+/ProjectMuse/ProjectMuse/4dv2r5bd.41m
+/ProjectMuse/ProjectMuse/4s2hcl4q.0d3
+/ProjectMuse/ProjectMuse/55s5vukb.lyx
+/ProjectMuse/ProjectMuse/5ok0m5pz.vur
+/ProjectMuse/ProjectMuse/ecfigeha.2ow
+/ProjectMuse/ProjectMuse/ivgla0bw.hlp
+/ProjectMuse/ProjectMuse/lmnm2eus.klq
+/ProjectMuse/ProjectMuse/mhllesjx.3ue
+/ProjectMuse/ProjectMuse/qj3odnb2.5gd
+/ProjectMuse/ProjectMuse/shgsmmga.r1x
+/ProjectMuse/ProjectMuse/suh1amey.fqh
+/ProjectMuse/ProjectMuse/tlihsgsl.glj
+/ProjectMuse/ProjectMuse/x50dcruk.4yk
+/ProjectMuse/ProjectMuse/yieymfgu.ilu
