--- a/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.filters
+++ b/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files\Resources</Filter>
     </ClCompile>
+    <ClCompile Include="SceneRootNode.cpp">
+      <Filter>Source Files\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StateStack.h">
@@ -169,6 +172,9 @@
     </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneRootNode.h">
+      <Filter>Header Files\Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
