quick code review

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@
 /ProjectMuse/ProjectMuse/tlihsgsl.glj
 /ProjectMuse/ProjectMuse/x50dcruk.4yk
 /ProjectMuse/ProjectMuse/yieymfgu.ilu
+/Documents
+/Documents/Emblem.png
+/Documents/lore.odt
+/Documents/Map.pdn
+/Documents/Map.png
+/Documents/rules.txt
+/Documents/rulingArmor.xlsx
+/Documents/rulingVitesseSpreadsheet.xlsx
+/Documents/units.xlsx
+/ProjectMuse/ProjectMuse
+/ProjectMuse/ProjectMuse/2ckhyrlj.boh
