--- a/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.filters
+++ b/ProjectMuse/ProjectMuse/ProjectMuse.vcxproj.filters
@@ -176,5 +176,8 @@
     <ClInclude Include="SceneRootNode.h">
       <Filter>Header Files\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Maths.hpp">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
